@@ -1,10 +1,15 @@
 package com.backend.luaspets.domain.Services;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import com.backend.luaspets.domain.DTO.CartRequest;
+import com.backend.luaspets.domain.DTO.CartResponse;
+import com.backend.luaspets.domain.DTO.CartItemRequest;
+import com.backend.luaspets.domain.DTO.CartItemResponse;
 import com.backend.luaspets.persistance.crud.AccessoriesRepository;
 import com.backend.luaspets.persistance.crud.CartItemRepository;
 import com.backend.luaspets.persistance.crud.CartRepository;
@@ -13,9 +18,13 @@ import com.backend.luaspets.persistance.crud.MedicineRepository;
 import com.backend.luaspets.persistance.entity.Cart;
 import com.backend.luaspets.persistance.entity.CartItem;
 import com.backend.luaspets.persistance.entity.Product;
+import com.backend.luaspets.persistance.mapper.CartMapper;
+import com.backend.luaspets.persistance.mapper.CartItemMapper;
+import com.backend.luaspets.User.UserRepository;
 
 @Service
 public class CartService {
+
     @Autowired
     private CartRepository cartRepository;
 
@@ -23,75 +32,99 @@ public class CartService {
     private CartItemRepository cartItemRepository;
 
     @Autowired
-    private MedicineRepository medicineRepository;
+    private FoodRepository foodRepository;
 
     @Autowired
-    private FoodRepository foodRepository;
+    private MedicineRepository medicineRepository;
 
     @Autowired
     private AccessoriesRepository accessoriesRepository;
 
-    public List<Cart> getAllCarts() {
-        return cartRepository.findAll(); // O la lógica para obtener todos los carritos
+    @Autowired
+    private UserRepository userRepository;
+
+    @Autowired
+    private CartMapper cartMapper;
+
+    @Autowired
+    private CartItemMapper cartItemMapper;
+
+    // Crear carrito desde DTO
+    public CartResponse createCartFromRequest(CartRequest request) {
+        Cart cart = new Cart();
+        cart.setUser(userRepository.findById(request.getUserId())
+                .orElseThrow(() -> new RuntimeException("User not found")));
+        cart.setCreatedAt(request.getCreatedAt());
+        cart.setUpdatedAt(request.getUpdatedAt());
+        Cart saved = cartRepository.save(cart);
+        return cartMapper.toCartResponse(saved);
     }
 
-    // Método para crear un nuevo carrito
-    public Cart createCart(Cart cart) {
-        return cartRepository.save(cart);
-    }
-
-    // Método para obtener un carrito por su ID
-    public Cart getCartById(Integer cartId) {
-        return cartRepository.findById(cartId).orElseThrow(() -> new RuntimeException("Cart not found"));
-    }
-
-    // Método para agregar un producto al carrito
-    public CartItem addProductToCart(Integer cartId, String productType, Integer productId, Integer quantity) {
-        // Verificar si el carrito existe
+    // Obtener carrito por ID
+    public CartResponse getCartById(Integer cartId) {
         Cart cart = cartRepository.findById(cartId)
                 .orElseThrow(() -> new RuntimeException("Cart not found"));
+        return cartMapper.toCartResponse(cart);
+    }
 
-        // Obtener el producto según el tipo y el ID
-        Product product = getProductByTypeAndId(productType, productId);
+    // Obtener carrito por UserID
+    public CartResponse getCartByUserId(Integer userId) {
+        Cart cart = cartRepository.findByUserId(userId)
+                .orElseThrow(() -> new RuntimeException("El usuario no tiene carrito"));
+        return cartMapper.toCartResponse(cart);
+    }
 
-        // Verificar si el producto existe
+    // Obtener todos los carritos
+    public List<CartResponse> getAllCarts() {
+        return cartRepository.findAll().stream()
+                .map(cartMapper::toCartResponse)
+                .collect(Collectors.toList());
+    }
+
+    // Agregar producto al carrito
+    public CartItemResponse addProductToCart(CartItemRequest request) {
+        Cart cart = cartRepository.findById(request.getCartId())
+                .orElseThrow(() -> new RuntimeException("Cart not found"));
+
+        Product product = getProductByTypeAndId(request.getProductType(), request.getProductId());
         if (product == null) {
             throw new RuntimeException("Product not found");
         }
 
-        // Crear y guardar el CartItem
         CartItem cartItem = new CartItem();
         cartItem.setCart(cart);
-        cartItem.setProduct(product); // Establecer relación con el producto
-        cartItem.setProductType(productType);
-        cartItem.setQuantity(quantity);
+        cartItem.setProduct(product);
+        cartItem.setProductType(request.getProductType());
+        cartItem.setQuantity(request.getQuantity());
         cartItem.setPrice(product.getPrice().doubleValue());
 
-        return cartItemRepository.save(cartItem);
+        CartItem savedItem = cartItemRepository.save(cartItem);
+        return cartItemMapper.toCartItemResponse(savedItem);
     }
 
-    // Método para obtener todos los productos de un carrito específico
-    public List<CartItem> getAllItemsInCart(Integer cartId) {
+    // Obtener todos los ítems de un carrito
+    public List<CartItemResponse> getAllItemsInCart(Integer cartId) {
         return cartItemRepository.findAll().stream()
                 .filter(item -> item.getCart().getIdCart().equals(cartId))
-                .toList();
+                .map(cartItemMapper::toCartItemResponse)
+                .collect(Collectors.toList());
     }
 
-    // Método para actualizar la cantidad de un producto en el carrito
-    public CartItem updateProductQuantity(Integer cartItemId, Integer quantity) {
+    // Actualizar cantidad de producto
+    public CartItemResponse updateProductQuantity(Integer cartItemId, Integer quantity) {
         CartItem cartItem = cartItemRepository.findById(cartItemId)
                 .orElseThrow(() -> new RuntimeException("CartItem not found"));
-    
         cartItem.setQuantity(quantity);
-        return cartItemRepository.save(cartItem);
+        CartItem updated = cartItemRepository.save(cartItem);
+        return cartItemMapper.toCartItemResponse(updated);
     }
 
-    // Método para eliminar un producto del carrito
+    // Eliminar producto del carrito
     public void removeProductFromCart(Integer cartItemId) {
         cartItemRepository.deleteById(cartItemId);
     }
 
-    // Método auxiliar para obtener un producto según su tipo y ID
+    // Método auxiliar para obtener producto por tipo
     private Product getProductByTypeAndId(String productType, Integer productId) {
         switch (productType.toLowerCase()) {
             case "food":
@@ -104,5 +137,4 @@ public class CartService {
                 throw new RuntimeException("Invalid product type");
         }
     }
-
 }
